--- a/apitester.html
+++ b/apitester.html
@@ -78,21 +78,22 @@
         <hr />
 
         
-<!-- 
-        <h2>Lägg till post:</h2>
 
+        <h2>Lägg till produkt:</h2>
+
+    <!-- Ändrade även name="title" till "name"  -->
         <form class="form">
-            <input type="text" name="url" placeholder="http://" /><br />
-            <input type="text" name="title" placeholder="title" /><br />
+            <input type="text" name="url" placeholder="http://" value="http://localhost/ApiProjekt/V1/cart/addProduct.php" /><br />
+            <input type="text" name="name" placeholder="name" /><br />
             <input type="text" name="token" placeholder="token" /><br />
-            <textarea name="content" placeholder="content"></textarea><br />
+            <!-- <textarea name="content" placeholder="content"></textarea><br /> -->
             GET: <input type="radio" name="method" value="get" checked /> POST: <input type="radio" name="method"
                 value="post" /><br />
             <input type="submit" />
         </form>
 
     <hr />
-
+<!-- 
         <h2>Uppdatera post:</h2>
 
         <form class="form">
@@ -108,13 +109,13 @@
                 value="post" /><br />
             <input type="submit" />
         </form>
-
+-->
     <hr />
-
-    <h2>Hämta en post:</h2>
+ 
+    <h2>Hämta en Produkt:</h2>
 
     <form class="form">
-        <input type="text" name="url" placeholder="http://" value="http://192.168.64.2/api/posts/getPost.php" /><br />
+        <input type="text" name="url" placeholder="http://" value="http://localhost/ApiProjekt/V1/products/viewProduct.php" /><br />
         <input type="text" name="id" placeholder="id" /><br />
 
         GET: <input type="radio" name="method" value="get" checked /> POST: <input type="radio" name="method"
@@ -124,17 +125,17 @@
 
 <hr />
 
-    <h2>Hämta alla posts:</h2>
+    <h2>Hämta alla Produkter:</h2>
 
     <form class="form">
-        <input type="text" name="url" placeholder="http://" value="http://192.168.64.2/api/posts/getAllPosts.php" /><br />
+        <input type="text" name="url" placeholder="http://" value="http://localhost/ApiProjekt/V1/products/viewAllProducts.php" /><br />
         <input type="text" name="token" placeholder="token" /><br />
         GET: <input type="radio" name="method" value="get" checked /> POST: <input type="radio" name="method"
             value="post" /><br />
         <input type="submit" />
     </form>
 </div>
- -->
+
 
 
     <div id="right">
