deleteProduct function now working

--- a/apitester.html
+++ b/apitester.html
@@ -134,9 +134,25 @@
             value="post" /><br />
         <input type="submit" />
     </form>
+
+
+<hr />
+
+<h2>Radera produkt:</h2>
+
+<form class="form">
+    <input type="text" name="token" placeholder="token" /><br />
+
+    <input type="text" name="url" placeholder="http://" value="http://localhost/ApiProjekt/V1/products/deleteProduct.php" /><br />
+    <input type="number" name="Id" placeholder="Id" /><br />
+    GET: <input type="radio" name="method" value="get" checked /> POST: <input type="radio" name="method"
+        value="post" /><br />
+    <input type="submit" />
+</form>
+
+<hr />
+
 </div>
-
-
 
     <div id="right">
         <textarea id="serverResponse"></textarea>
