--- a/apitester.html
+++ b/apitester.html
@@ -174,6 +174,17 @@
     <input type="submit" />
 </form>
 
+<h2>Radera Cart:</h2>
+
+<form class="form">
+    <input type="text" name="token" placeholder="token" /><br />
+    <input type="text" name="url" placeholder="http://" value="http://localhost/ApiProjekt/V1/cart/deleteCart.php" /><br />
+    <input type="number" name="Id" placeholder="Id" /><br />
+    GET: <input type="radio" name="method" value="get" checked /> POST: <input type="radio" name="method"
+        value="post" /><br />
+    <input type="submit" />
+</form>
+
 </div>
 
     <div id="right">
