view cart with using userId

--- a/apitester.html
+++ b/apitester.html
@@ -132,7 +132,7 @@
     <form class="form">
         <input type="text" name="url" placeholder="http://" value="http://localhost/ApiProjekt/V1/products/viewAllProducts.php" /><br />
         <input type="text" name="token" placeholder="token" /><br />
-        Sortera efter: Fallande<input type="radio" name="desc" value="desc"> Stigande<input type="radio" name="asc" value="asc" /><br />
+        Sortera efter: Fallande<input type="radio" name="order" value="desc"> Stigande<input type="radio" name="order" value="asc" /><br />
         GET: <input type="radio" name="method" value="get" checked /> POST: <input type="radio" name="method"
             value="post" /><br />
         <input type="submit" />
