--- a/apitester.html
+++ b/apitester.html
@@ -25,6 +25,7 @@
             width: 100%;
             height: 100%;
         }
+
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
@@ -119,7 +120,6 @@
     <form class="form">
         <input type="text" name="url" placeholder="http://" value="http://localhost/ApiProjekt/V1/products/viewProduct.php" /><br />
         <input type="text" name="Id" placeholder="Id" /><br />
-
         GET: <input type="radio" name="method" value="get" checked /> POST: <input type="radio" name="method"
             value="post" /><br />
         <input type="submit" />
@@ -158,7 +158,7 @@
 <h2>Lägg till produkt i varukorg:</h2>
 <form class="form">
     <input type="text" name="url" placeholder="http://" value="http://localhost/ApiProjekt/V1/cart/addToCart.php" /><br />
-    <input type="number" name="productAmount" placeholder="amount"> <br />
+    <input type="number" name="productAmount" placeholder="productAmount" /> <br />
     <input type="number" name="productId" placeholder="productId" /><br />
     <input type="text" name="token" placeholder="token" /><br />
     <input type="number" name="userId" placeholder="userId" /><br />
