checkoutStatus & updateProductAmount working

--- a/apitester.html
+++ b/apitester.html
@@ -186,11 +186,11 @@
     <input type="submit" />
 </form>
 
-<h2>:</h2>
+<h2>Checka ut varukorg:</h2>
 <form class="form">
+    <input type="text" name="url" placeholder="http://" value="http://localhost/ApiProjekt/V1/cart/checkoutCart.php" /><br />
     <input type="text" name="token" placeholder="token" /><br />
-    <input type="text" name="url" placeholder="http://" value="http://localhost/ApiProjekt/V1/orderrow/deleteOrderrow.php" /><br />
-    <input type="number" name="orderId" placeholder="orderId" /><br />
+    <input type="number" name="userId" placeholder="userId" /><br />
     GET: <input type="radio" name="method" value="get" checked /> POST: <input type="radio" name="method"
         value="post" /><br />
     <input type="submit" />
