README and ecommerse.sql updated

--- a/apitester.html
+++ b/apitester.html
@@ -167,9 +167,9 @@
 
 <h2>Hämta varukorg:</h2>
 <form class="form">
-    <input type="text" name="url" placeholder="http://" value="http://localhost/ApiProjekt/V1/orderrow/viewOrderrow.php" /><br /> 
+    <input type="text" name="url" placeholder="http://" value="http://localhost/ApiProjekt/V1/cart/viewCart.php" /><br /> 
     <input type="text" name="token" placeholder="token" /><br />
-    <input type="number" name="orderId" placeholder="orderId" /><br />
+    <input type="number" name="cartId" placeholder="cartId" /><br />
     GET: <input type="radio" name="method" value="get" checked /> POST: <input type="radio" name="method"
     value="post" /><br />
     <input type="submit" />
@@ -180,11 +180,24 @@
 <form class="form">
     <input type="text" name="token" placeholder="token" /><br />
     <input type="text" name="url" placeholder="http://" value="http://localhost/ApiProjekt/V1/orderrow/deleteOrderrow.php" /><br />
-    <input type="number" name="Id" placeholder="Id" /><br />
+    <input type="number" name="orderrowId" placeholder="Orderrow Id" /><br />
     GET: <input type="radio" name="method" value="get" checked /> POST: <input type="radio" name="method"
         value="post" /><br />
     <input type="submit" />
 </form>
+
+<h2>Uppdatera varukorg:</h2>
+
+<form class="form">
+    <input type="text" name="url" placeholder="http://" value="http://localhost/ApiProjekt/V1/orderrow/updateOrderrow.php" /><br />
+    <input type="text" name="token" placeholder="token" /><br />
+    <input type="number" name="amount" placeholder="New product amount"><br />
+    <input type="number" name="rowId" placeholder="Orderrow Id" /><br />
+    GET: <input type="radio" name="method" value="get" checked /> POST: <input type="radio" name="method"
+        value="post" /><br />
+    <input type="submit" />
+</form>
+
 
 <h2>Checka ut varukorg:</h2>
 <form class="form">
